# AI_LLM_PROJECT

.github/: copilot-instructions.md
llama-hf-finetune/: .gitattributes  README.md  pyproject.toml  requirements.txt  setup.cfg
llama-hf-finetune/.github/workflows/: ci.yml
llama-hf-finetune/configs/: inference.yaml  training.yaml
llama-hf-finetune/data/processed/: dataset.jsonl
llama-hf-finetune/data/raw/: README.md
llama-hf-finetune/data/splits/: test.jsonl  train.jsonl  val.jsonl
llama-hf-finetune/docker/: Dockerfile  docker-compose.yml
llama-hf-finetune/experiments/experiment_001/: config.yaml  results.csv
llama-hf-finetune/experiments/hyperparam_search/: search_config.yaml
llama-hf-finetune/huggingface/: model_card.md  upload_model.sh
llama-hf-finetune/notebooks/: example_prompts.ipynb
llama-hf-finetune/scripts/: deploy_to_hf.sh  prepare_data.py  run_evaluation.sh  run_training.sh  setup_venv.sh
llama-hf-finetune/src/: evaluate.py  finetune.py  hyperparam_search.py  inference.py  train.py  utils.py
llama-hf-finetune/src/models/: llama_wrapper.py
llama-hf-finetune/tests/: test_data.py  test_inference.py
