[metadata]
name = llama-hf-finetune
version = 0.1.0
description = Fine-tuning and evaluation of LLaMa models using Hugging Face library.
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/llama-hf-finetune
license = MIT

[options]
packages = find:
install_requires =
    torch>=1.9.0
    transformers>=4.0.0
    datasets>=1.0.0
    scikit-learn>=0.24.0
    pandas>=1.2.0
    numpy>=1.19.0

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*